# skink

./: .clang-format  .gitignore  CMakeLists.txt  README.md  conanfile.txt
.github/workflows/: lint.yml
inc/fzcw/: fzcw.h  sizeptr.h  zstream.h
inc/skink/: flexptr.h  memcpy.h  random.h  sizeptr.h  spinlock.h  zstream.h
include/fzcw/: fzcw.h
lib/: CMakeLists.txt  fzcw.cc  zstream.cc
src/: CMakeLists.txt  fzcw.cc  fzcw_example.cc  random_bench.cc  zstream_bench.cc
test/: CMakeLists.txt  flexptr_test.cc  random_test.cc  sizeptr_test.cc  zstream_test.cc
tests/: CMakeLists.txt  test_fzcw.cc
